--- a/qr-codes/qrcode/main/templates/main/layout.html
+++ b/qr-codes/qrcode/main/templates/main/layout.html
@@ -56,12 +56,17 @@
             </ul>
           </div>
           <div class="quote_btn-container">
-            <a href="">
-              <span>
-                Login
-              </span>
-              <i class="fa fa-user" aria-hidden="true"></i>
-            </a>
+            {% if user.is_authenticated %}
+              <a href="{% url 'logout' %}">
+                <span>Logout</span>
+                <i class="fa fa-sign-out" aria-hidden="true"></i>
+              </a>
+            {% else %}
+              <a href="{% url 'login' %}">
+                <span>Login</span>
+                <i class="fa fa-user" aria-hidden="true"></i>
+              </a>
+            {% endif %}
             <form class="form-inline">
               <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit">
                 <i class="fa fa-search" aria-hidden="true"></i>
