--- a/qr-codes/qr-code/main/templates/main/layout.html
+++ b/qr-codes/qr-code/main/templates/main/layout.html
@@ -43,16 +43,21 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <div class="d-flex mx-auto flex-column flex-lg-row align-items-center">
-            <ul class="navbar-nav  ">
+            <ul class="navbar-nav">
               <li class="nav-item active">
                 <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about"> About</a>
+                <a class="nav-link" href="about">About</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="contacts">Contact Us</a>
               </li>
+              {% if user.is_authenticated %}
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'my_qrs' %}">My QR-codes</a>
+                </li>
+              {% endif %}
             </ul>
           </div>
           <div class="quote_btn-container">
