--- a/qr-codes/qr-code/main/templates/main/index.html
+++ b/qr-codes/qr-code/main/templates/main/index.html
@@ -14,25 +14,25 @@
                 <div class="col-md-5">
                   <div class="detail-box">
                     <h1>
-                      For All Your <br>
-                      QR-codes Needs
+                      For all your <br>
+                      QR code needs
                     </h1>
                     <p>
-                      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus quidem maiores perspiciatis, illo maxime voluptatem a itaque suscipit.
+                      Create, save, and manage your own QR codes for business, education, or personal use. Fast, easy, and free!
                     </p>
                     <div class="btn-box">
-                      <a href="" class="btn1">
-                        Contact Us
+                      <a href="{% url 'contacts' %}" class="btn1">
+                        Contact us
                       </a>
-                      <a href="" class="btn2">
-                        About Us
+                      <a href="{% url 'about' %}" class="btn2">
+                        Learn more
                       </a>
                     </div>
                   </div>
                 </div>
                 <div class="col-md-7">
                   <div class="img-box">
-                    <img src="{% static 'main/images/slider-img.png' %}" alt="">
+                    <img src="{% static 'main/images/slider-img.png' %}" alt="QR Codes">
                   </div>
                 </div>
               </div>
@@ -44,24 +44,25 @@
                 <div class="col-md-5">
                   <div class="detail-box">
                     <h1>
-                      Create custom <br>
+                      Create your own <br>
+                      unique QR codes
                     </h1>
                     <p>
-                      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus quidem maiores perspiciatis, illo maxime voluptatem a itaque suscipit.
+                      Generate QR codes for links, contacts, Wi-Fi, text, and more. Just enter your data and get your code in seconds!
                     </p>
                     <div class="btn-box">
-                      <a href="" class="btn1">
-                        Contact Us
+                      <a href="{% url 'contacts' %}" class="btn1">
+                        Contact us
                       </a>
-                      <a href="" class="btn2">
-                        About Us
+                      <a href="{% url 'about' %}" class="btn2">
+                        Learn more
                       </a>
                     </div>
                   </div>
                 </div>
                 <div class="col-md-7">
                   <div class="img-box">
-                    <img src="{% static 'main/images/slider-img.png' %}" alt="">
+                    <img src="{% static 'main/images/slider-img.png' %}" alt="QR Generator">
                   </div>
                 </div>
               </div>
@@ -73,24 +74,25 @@
                 <div class="col-md-5">
                   <div class="detail-box">
                     <h1>
-                      Manage Your Own <br>
+                      Manage your <br>
+                      QR codes easily
                     </h1>
                     <p>
-                      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus quidem maiores perspiciatis, illo maxime voluptatem a itaque suscipit.
+                      Keep all your created QR codes in your profile, download them anytime, or delete the ones you no longer need — full control at your fingertips!
                     </p>
                     <div class="btn-box">
-                      <a href="" class="btn1">
-                        Contact Us
+                      <a href="{% url 'contacts' %}" class="btn1">
+                        Contact us
                       </a>
-                      <a href="" class="btn2">
-                        About Us
+                      <a href="{% url 'about' %}" class="btn2">
+                        Learn more
                       </a>
                     </div>
                   </div>
                 </div>
                 <div class="col-md-7">
                   <div class="img-box">
-                    <img src="{% static 'main/images/slider-img.png' %}" alt="">
+                    <img src="{% static 'main/images/slider-img.png' %}" alt="QR Manager">
                   </div>
                 </div>
               </div>
@@ -113,21 +115,21 @@
       <div class="row">
         <div class="col-md-6">
           <div class="img-box">
-            <img src="{% static 'main/images/about-img.png' %}" alt="">
+            <img src="{% static 'main/images/about-img.png' %}" alt="About us">
           </div>
         </div>
         <div class="col-md-6">
           <div class="detail-box">
             <div class="heading_container">
               <h2>
-                About Us
+                About us
               </h2>
             </div>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti dolorem eum consequuntur ipsam repellat dolor soluta aliquid laborum, eius odit consectetur vel quasi in quidem, eveniet ab est corporis tempore.
+              We are a team of professionals dedicated to making QR code creation and management simple for you. Our goal is to provide you with tools that make your life easier.
             </p>
-            <a href="">
-              Read More
+            <a href="{% url 'about' %}">
+              Learn more
             </a>
           </div>
         </div>
